--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <vaadin.version>8.0.0.alpha2</vaadin.version>
         <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
+	<sonar.login>sonartoken</sonar.login>   
     </properties>
 
     <repositories>
